# src/WebSdk/src/api/index.ts
@@ -3,5 +3,6 @@ export * from "./generated/devices/devices";
 export * from "./generated/engine/engine";
 export * from "./generated/model";
 export * from "./generated/modules/modules";
+export * from "./generated/preferences/preferences";
 export { initializeAccessToken } from "./accessToken";
 export { EngineApiError, engineFetch, getAccessToken, setAccessToken } from "./engineFetch";
